Fix typos found by Antti Kantee and Jean-Yves Migeon

Deprecate the --qemu-args -no-kvm-irqchip workaround, as it doesn't
quite work.

Add support for MacOS X hosts, from Jeff Rizzo.

New command line option "--test-timeout".

Deal with yet another seemingly nondetermininstic "Press enter to
continue" prompt.

- 1.18 released -

Deal with sysinst no longer asking for a password cipher.

Create the work directory in "test" mode so that it works without
running "install" first.

Fix incorrect description of the --workdir option in the man page, and
consistently use the term "work directory" throughout.

Reorganized the man page, adding a MODES section.

New mode "print-workdir".

Fix installation of historical versions of -current around
CVS date 2009.08.23.20.57.40.

- 1.17 released -

Fix bugs in the new features introduced in 1.16: the --sets option
only worked when passing the URL of a distribution directory (rather
than a pathname or the url of an ISO), and exporting of ATF output
only worked when using --workdir with an abolute pathname.

- 1.16 released -

Update the discussion of Linux KVM virtualization compatibility in the
BUGS section, noting the --qemu-args -no-kvm-irqchip workaround and
including a reference to PR 44069.

New command line option "--sets".

Add a rudimentary INSTALL file.

The "misc" set is now installed by default, as it is required for
the ATF XML DTD, XSL files, and style sheets.

The "test" command now exports the raw and XML format ATF output
to the host, along with some auxiliary files needed for further
processing of the XML output.

Add support for FreeBSD hosts, from Kurt Lidl.

- 1.15 released -

Increase the timeout for "--run" commands to one hour.

Restrict snapshotting to the system disk, so that additional disks
mounted for the purpose of exporting data can be persistently
modified.

- 1.14 released -

Increase the maximum number of boot floppies, as four is no longer
enough for amd64.

New command line option "--run".
